feat: qt6 support as static plugin

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,26 +2,26 @@ project(OpenVirtualKeyboardProj)
 cmake_minimum_required(VERSION 3.20)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
-set(CMAKE_AUTOMOC ON)
-set(CMAKE_AUTOUIC ON)
 
 set(CXX_STANDARD 17)
+set(CMAKE_AUTORCC ON)
 
-option(USE_QTQUICKCOMPILED_RESOURCES OFF)
+# option(USE_QTQUICKCOMPILED_RESOURCES OFF)
 
-if(${USE_QTQUICKCOMPILED_RESOURCES})
-    find_package(Qt5QuickCompiler)
-    set(PROJECT_ADD_RESOURCES qtquick_compiler_add_resources)
-else()
-    set(PROJECT_ADD_RESOURCES qt5_add_resources)
-endif()
+# if(${USE_QTQUICKCOMPILED_RESOURCES})
+#     find_package(Qt5QuickCompiler)
+#     set(PROJECT_ADD_RESOURCES qtquick_compiler_add_resources)
+# else()
+#     set(PROJECT_ADD_RESOURCES qt5_add_resources)
+# endif()
 
-find_package(Qt5 COMPONENTS Quick Core Gui REQUIRED)
+find_package(Qt6 COMPONENTS Quick Core Gui REQUIRED)
 
-cmake_language(CALL ${PROJECT_ADD_RESOURCES} KEYBOARD_LIBRARY_RESOURCES ${CMAKE_CURRENT_LIST_DIR}/OpenVirtualKeyboard/qml.qrc)
+# cmake_language(CALL ${PROJECT_ADD_RESOURCES} KEYBOARD_LIBRARY_RESOURCES ${CMAKE_CURRENT_LIST_DIR}/OpenVirtualKeyboard/qml.qrc)
 
 
-add_library(OpenVirtualKeyboard SHARED
+qt_add_plugin(OpenVirtualKeyboard STATIC
+    CLASS_NAME OpenVirtualKeyboardPlugin
     ${CMAKE_CURRENT_LIST_DIR}/OpenVirtualKeyboard/commonpositioner.cpp
     ${CMAKE_CURRENT_LIST_DIR}/OpenVirtualKeyboard/injectedkeyboardpositioner.cpp
     ${CMAKE_CURRENT_LIST_DIR}/OpenVirtualKeyboard/key.cpp
@@ -55,20 +55,27 @@ add_library(OpenVirtualKeyboard SHARED
     ${CMAKE_CURRENT_LIST_DIR}/OpenVirtualKeyboard/openvirtualkeyboardplugin.h
     ${CMAKE_CURRENT_LIST_DIR}/OpenVirtualKeyboard/utils.h
 
-    ${KEYBOARD_LIBRARY_RESOURCES}
+    ${CMAKE_CURRENT_LIST_DIR}/OpenVirtualKeyboard/qml.qrc
 )
 
 target_include_directories(
     OpenVirtualKeyboard
     PUBLIC
     ${CMAKE_CURRENT_LIST_DIR}/OpenVirtualKeyboard
-    ${Qt5Gui_PRIVATE_INCLUDE_DIRS}
-    ${Qt5Quick_PRIVATE_INCLUDE_DIRS}
-)
-set_target_properties(OpenVirtualKeyboard
-    PROPERTIES
-    LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/platforminputcontexts
-    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/platforminputcontexts
+    ${Qt6Gui_PRIVATE_INCLUDE_DIRS}
+    ${Qt6Quick_PRIVATE_INCLUDE_DIRS}
+    ${Qt6Gui_INCLUDE_DIRS}
 )
 
-target_link_libraries(OpenVirtualKeyboard PRIVATE Qt5::Core Qt5::Quick Qt5::Gui)
+# set_target_properties(OpenVirtualKeyboard
+#     PROPERTIES
+#     LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/platforminputcontexts
+#     RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/platforminputcontexts
+# )
+
+target_link_libraries(OpenVirtualKeyboard
+    PRIVATE
+    Qt6::Core
+    Qt6::Gui
+    Qt6::Quick
+)
